# kung_fu_site

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  README.md  manage.py  pyproject.toml  ruff.toml
core/: urls.py  views.py
core/templates/: about.html  contact.html  home.html
core/templates/core/: base.html
kung_fu_site/: asgi.py  settings.py  urls.py  wsgi.py
