[project]
name = "kung-fu-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Izzy Matos",email = "15269860+izzydoesit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-ninja (>=1.4.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
